# c-ds-algorithms

./: README.md
Binary_tree/: CMakeLists.txt  Makefile  README.md  main.c
Binary_tree/include/: tree.h
Binary_tree/src/: tree.c
C_tricks/: 01_assembly_inline.c  02_bus_error.c  03_creative_comments.c  04_const_switch_case.c  05_const_pointer_overwrite.c  06_implicit_char_to_int.c  07_longjmp_local_variables.c  08_block_scope_lifetime.c  09_variable_shadowing.c  10_macro_defined_symbols.c  11_malloc_idiomatic_sizing.c  12_trace_macros.c  13_malloc_shadow_conflict.c  14_string_literal_adjacency.c  15_typedef_vs_macro.c  Makefile  README.md
Doubly_linked_list/: CMakeLists.txt  Makefile  README.md  main.c
Doubly_linked_list/include/: list.h
Doubly_linked_list/src/: list.c
Heap/: CMakeLists.txt  Makefile  README.md  main.c
Heap/include/: heap.h
Heap/src/: heap.c
Huffman_coding/: CMakeLists.txt  Makefile  README.md  main.c
Huffman_coding/include/: huffman.h
Huffman_coding/src/: huffman.c
Red_black_tree/: CMakeLists.txt  Makefile  README.md  main.c
Red_black_tree/include/: brtree.h
Red_black_tree/src/: brtree.c
